Icons that are used in emblem_box are non-symbolic
I'm not sure of all cases for icons that show up in the emblem_box outside of the standard emblem icons aside from mounted drive, but using non-symbolic icons here doesn't make much sense anymore, especially since it stays at 16x16 regardless of zoom level, so might be worthwhile moving to using symbolics.
cc-ing @jimmac as this would likely lead to deprecating the fullcolor emblem icons in a-i-t