file: Use symbolic assets for emblems box

- update UI file for emblems box to use symbolics
- new icon assets for symbolic emblems

Fixes: https://gitlab.gnome.org/GNOME/nautilus/-/issues/3135