src/nautilus-file.h
@@ -7,15 +7,15 @@
    modify it under the terms of the GNU General Public License as
    published by the Free Software Foundation; either version 2 of the
    License, or (at your option) any later version.
-  
+
    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
    General Public License for more details.
-  
+
    You should have received a copy of the GNU General Public
    License along with this program; if not, see <http://www.gnu.org/licenses/>.
-  
+
    Author: Darin Adler <darin@bentspoon.com>
 */
 
@@ -68,7 +68,7 @@ typedef enum {
 	NAUTILUS_FILE_SORT_BY_TRASHED_TIME,
 	NAUTILUS_FILE_SORT_BY_SEARCH_RELEVANCE,
 	NAUTILUS_FILE_SORT_BY_RECENCY
-} NautilusFileSortType;	
+} NautilusFileSortType;
 
 typedef enum {
 	NAUTILUS_REQUEST_NOT_STARTED,
@@ -84,11 +84,6 @@ typedef enum {
 } NautilusFileIconFlags;
 
 #define NAUTILUS_THUMBNAIL_MINIMUM_ICON_SIZE 32
-
-/* Emblems sometimes displayed for NautilusFiles. Do not localize. */
-#define NAUTILUS_FILE_EMBLEM_NAME_SYMBOLIC_LINK "symbolic-link"
-#define NAUTILUS_FILE_EMBLEM_NAME_CANT_READ "unreadable"
-#define NAUTILUS_FILE_EMBLEM_NAME_CANT_WRITE "readonly"
 
 typedef void (*NautilusFileCallback)          (NautilusFile  *file,
 				               gpointer       callback_data);
